--- a/styles/style.css
+++ b/styles/style.css
@@ -54,15 +54,42 @@ header p {
 }
 
 nav {
-	height: auto;
+  position: relative;
+  margin: .5em;
+  width: 100%;
 }
 
 nav ul {
-	padding: 0;
-	margin: 0;
-	float: left;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
+
+nav ul li a {
+  display: block;
+  padding: .7em;
+  color: black;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: #F2B544;
+}
+
+nav ul li a .fa{
+  width: 1em;
+  text-align: center;
+  margin-right: .3em;
+  float: right;
+  color: black;
+}
+
+nav ul li ul li a {
+  padding-left: 3em;
+}
+
+/*https://codepen.io/bulentsakarya/pen/YVYQOe?css-preprocessor=none*/
 
 
 
